--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   },
   "author": "bLue",
   "dependencies": {
+    "@koa/cors": "^5.0.0",
     "axios": "^0.26.1",
     "bwcx-api": "^1.0.1",
     "bwcx-api-client": "^1.0.1",
@@ -36,6 +37,7 @@
     "koa-favicon": "^2.1.0",
     "koa-mount": "^4.0.0",
     "koa-static": "^5.0.0",
+    "lodash": "^4.17.21",
     "lru-cache": "^11.0.1",
     "module-alias": "^2.2.2",
     "mongoose": "^8.6.2",
@@ -48,6 +50,7 @@
     "@types/fs-extra": "^9.0.13",
     "@types/ip": "^1.1.3",
     "@types/koa-favicon": "^2.0.21",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^16.18.69",
     "@types/statuses": "^2.0.4",
     "copyfiles": "^2.4.1",
