feat(server): add ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,4 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/thenac_paste:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/thenac-paste:latest
