--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
+    "@beyonk/svelte-google-analytics": "^2.6.4",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/adapter-cloudflare": "^4.7.2",
     "@sveltejs/adapter-static": "^3.0.4",
