--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "filesize": "^10.1.6",
     "highlight.js": "^11.10.0",
     "lodash-es": "^4.17.21"
   },
