--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - '.github/workflows/ci.yml'
       - 'Dockerfile'
+      - 'common/**'
       - 'server/**'
 jobs:
   build-and-push:
